gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/ActivateTrainerException.java
package com.example.gymcrm.api.rest.error.exception;

public class ActivateTrainerException extends RuntimeException {
    public ActivateTrainerException(String message) {
        super(message);
    }
}
